--- a/evolution/PHP/teste-baileys/socket/baileys.html
+++ b/evolution/PHP/teste-baileys/socket/baileys.html
@@ -45,8 +45,8 @@
 
     const socket = io('https://socket.apibrasil.com.br', {
         query: {
-            "bearer": 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwczovL3BsYXRhZm9ybWEuYXBpYnJhc2lsLmNvbS5ici9hdXRoL2xvZ2luIiwiaWF0IjoxNjc2MzA0NjgxLCJleHAiOjE3MDc4NDA2ODEsIm5iZiI6MTY3NjMwNDY4MSwianRpIjoiNEVBWDBubWFPUDVaazN0UiIsInN1YiI6IjIiLCJwcnYiOiIyM2JkNWM4OTQ5ZjYwMGFkYjM5ZTcwMWM0MDA4NzJkYjdhNTk3NmY3In0.vwT4CM5BTl8_OmnKw8dIxi3qe1WPKcfTL3x6KhcwVaY', // seu BearerToken
-            "channelName": '2d55c381-6fa3-4a62-8cec-1ad0b479599e' //seu profileID
+            "bearer": '.........CJwcnYiOiIyM2JkNWM4OTQ5ZjYwMGFkYjM5ZTcwMWM0MDA4NzJkYjdhNTk3NmY3In0.vwT4CM5BTl8_OmnKw8dIxi3qe1WPKcfTL3x6KhcwVaY', // seu BearerToken
+            "channelName": '.....1ad0b479599e' //seu profileID
         },
         transports: ['websocket']
     });
